--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,17 @@
-<h1> Cocktails </h1>
+<div class="container text-center">
+  <h1> Cocktails </h1>
+  <div class="row">
+    <p><%= link_to "Add a new cocktail", new_cocktail_path %></p>
+  </div>
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+    <div class="col-xs-4">
+      <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+      <p><%= link_to "Delete", cocktail_path(cocktail), method: :delete %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<% @cocktail.each do |cocktail| %>
-<h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
-<% end %>
 
-<p><%= link_to "New cocktail", new_cocktail_path %></p>
+
