--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,15 @@
 <h1><%= @cocktail.name %></h1>
 
+<ul>
+  <% @cocktail.doses.each do |dose| %>
+    <li>
+      <%= dose.description %>
+      <%= dose.ingredient.name %>
+    </li>
+    <%= link_to "Delete", dose_path(dose), method: :delete %>
+  <% end %>
+</ul>
 
 <%= render 'doses/form' %>
+
+<%= link_to "Back", root_path %>
