--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -3,10 +3,10 @@
 
   <div class="form-inputs">
     <%= f.input :description %>
-    <%= f.input :ingredient, collection: Ingredient.all %>
+    <%= f.association :ingredient, collection: Ingredient.all %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.submit "add a cocktail", class: "btn btn-primary" %>
   </div>
 <% end %>
