--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,13 +5,15 @@
   </div>
   <div class="row">
     <% @cocktails.each do |cocktail| %>
-    <div class="col-xs-4">
-      <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
-      <p><%= link_to "Delete", cocktail_path(cocktail), method: :delete %></p>
-      <% end %>
-    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="card"
+      style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+         url('')">>
+        <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+        <p><%= link_to "Delete", cocktail_path(cocktail), method: :delete %></p>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
-
-
 
