--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
-  <%= f.submit "add a cocktail", class: "btn btn-primary" %>
+  <%= f.submit "Create a cocktail", class: "btn btn-primary" %>
 <% end %>
 
