--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,11 +2,13 @@
 
 <ul>
   <% @cocktail.doses.each do |dose| %>
-    <li>
-      <%= dose.description %>
-      <%= dose.ingredient.name %>
-    </li>
-    <%= link_to "Delete", dose_path(dose), method: :delete %>
+    <% if dose.persisted? %>
+      <li>
+        <%= dose.description %>
+        <%= dose.ingredient.name %>
+        <%= link_to "Delete", dose_path(dose), method: :delete %>
+      </li>
+    <% end %>
   <% end %>
 </ul>
 
