--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.submit "add a cocktail", class: "btn btn-primary" %>
+    <%= f.submit "add a dose", class: "btn btn-primary" %>
   </div>
 <% end %>
